Fixed footer alignment for the most part

--- a/styles/style.css
+++ b/styles/style.css
@@ -155,7 +155,7 @@ header img {
 
 #vanessa {
     display: grid;
-    grid-template-columns: 200px 200px 200px 200px;
+    grid-template-columns: 100px 200px 200px 200px;
     height: 100px;
 }
 
@@ -168,26 +168,34 @@ header img {
 
 #name {
     font-weight: bolder;
-    margin-left: 5px;
-    grid-column: 1;
+    grid-column: 2;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    height: 50px;
+}
+
+.foot {
+    max-width: 600px;
+    color: rgb(177, 174, 174);
+    grid-column-start: 2;
+    grid-column-end: 4;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
 }
 
-.foot {
-    margin-left: 80px;
-    max-width: 600px;
-    color: rgb(177, 174, 174);
-    grid-column: 1;
-}
-
 button {
     grid-column: 4;
     height: 100px;
-    width: 100px;
+    width: 150px;
     background-color: orange;
     margin-left: 100px;
+    font-size: 1.5rem;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 footer {
